--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,10 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "ES2022",
-    "module": "ES2022",
+    // "target": "ES2022",
+    // "module": "ES2022",
+    "target": "es2015",
+    "module": "esnext",
     "useDefineForClassFields": false,
     "lib": [
       "ES2022",
